Переработка AI-помощника
Перенёс AI-бота на главную страницу